# bal_simple_finance_app_with_django_and_htmx

./: .gitignore  README.md  bal_simple_finance_app_with_django_and_htmx.code-workspace.dist  manage.py.dist  pyproject.toml
bal_simple_finance_app_with_django_and_htmx/: asgi.py  settings.py  urls.py  wsgi.py
panggil_aja_customer_contact/: apps.py  forms.py  models.py  urls.py  views.py
panggil_aja_customer_contact/migrations/: 0001_initial.py
panggil_aja_customer_contact/templates/: index.html
panggil_aja_customer_contact/templates/cotton/: button.html  form.html  form_field.html  name_field.html
panggil_aja_customer_contact/templates/partials/: contact.html  form.html
panggil_aja_customer_contact/templates/prefilled_partials/: contact.html  form.html
templates/: base.html
