[tool.poetry]
name = "bal-simple-finance-app-with-django-and-htmx"
version = "0.2"
description = ""
authors = ["Mahmuda <bal.mahmuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
Django = "~5.1"
django-htmx = "~1.19.0"
django-cotton = "~0.9.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
